--- a/install.org
+++ b/install.org
@@ -35,16 +35,26 @@ There are also many packages that augment Org available on [[https://melpa.org/#
 Once you're ready to Org, check out the [[file:quickstart.org][Quickstart]]
 page for an overview of the syntax.
 
-* Doom, Spacemacs, and popular configs
-The Emacs starter kits /Doom/ and /Spacemacs/ come with a curated set of packages and configurations that may be
-more familiar to users coming from other editors (e.g. Vim). They include Org along with integrations between
-=org-mode= and other modes (such as =evil-mode=). Here are links to the current packages included with
+* Doom, Spacemacs, Scimax, and popular configs
+The Emacs starter kits [[https://github.com/hlissner/doom-emacs][Doom]],
+[[https://www.spacemacs.org/][Spacemacs]], and
+[[https://github.com/jkitchin/scimax][Scimax]] come with a
+curated set of packages and configurations that aim to enhance Org
+mode (and Emacs more generally) for particular use cases. They include
+Org along with integrations between =org-mode= and other modes (such
+as =evil-mode=). Here are links to the current packages included with
 [[https://github.com/hlissner/doom-emacs/blob/develop/modules/lang/org/packages.el][Doom]], and
 [[https://github.com/syl20bnr/spacemacs/blob/master/layers/%2Bemacs/org/packages.el][Spacemacs]].
-/Doom/ installs a version of Org that is close to the development ~HEAD~.
+/Scimax/ is deeply integrated with Org so a good place to start is the
+[[https://github.com/jkitchin/scimax/blob/master/scimax.org#org-mode][manual]].
+/Doom/ installs a version of Org that is close to the development
+~HEAD~, while /Spacemacs/ and /Scimax/ track org elpa.
 
-Popular configs like [[https://github.com/purcell/emacs.d/blob/master/lisp/init-org.el][Purcell's emacs.d]]
-often include org-mode customization, and Org-related packages.
+Starter kits often make significant changes to the default user
+experience for Emacs. If you are looking for something closer to
+vanilla Emacs there are popular configs such as
+[[https://github.com/purcell/emacs.d/blob/master/lisp/init-org.el][Purcell's emacs.d]]
+that include org-mode customization, and Org-related packages.
 
 * In Other Editors
 While the full set of Org [[file:features.html][features]] is
